# cup

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
cmake/: AutoDeps.cmake  DepCollect.cmake  ExportHelper.cmake
debian/: postinst.in
scripts/: package.sh  test_packages.sh
src/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  core.cxx  core.ixx
src/lib/fetcher/: CMakeLists.txt  fetcher.cxx  fetcher.ixx
src/lib/http/: CMakeLists.txt  client.cxx  client.ixx  error.cxx  errors.ixx  session.cxx  session.ixx
src/lib/http/tests/: CMakeLists.txt  session_test.cxx
